# portfolio-blog-django-react

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
blog/: admin.py  models.py  serializers.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_initial.py  0003_alter_post_date_alter_post_excerpt.py  0004_alter_post_image_alter_post_thumbnail.py
blog/tests/: test_views.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  w3.css
frontend/src/components/: Footer.js  Header.js  Pagination.js  PopularPosts.js  PostItem.js  usePagination.js
frontend/src/context/: AuthContext.js
frontend/src/pages/: LoginPage.js  PageNotFound.js  PostListPage.js  PostPage.js  RegisterPage.js
frontend/src/utils/: axiosInstanse.js
jwt_auth/: forms.py  models.py  serializers.py  urls.py  views.py
jwt_auth/migrations/: 0001_initial.py
jwt_auth/tests/: test_views.py
nginx/: Dockerfile  nginx.conf
portfolio/: admin.py  context_processors.py  forms.py  models.py  tasks.py  urls.py  views.py
portfolio/management/commands/: dummy_db_data.py  migrate.py
portfolio/migrations/: 0001_initial.py  0002_alter_contact_name_alter_portfolioproject_excerpt.py  0003_alter_portfolioproject_image.py
portfolio/templates/portfolio/: 404.html  about.html  base.html  contact.html  contact_success.html  (+2 more)
portfolio/templatetags/: chunk_filter.py  paginator_tags.py
portfolio/tests/: test_forms.py  test_models.py  test_views.py
portfolio_site/: celery.py  settings.py  urls.py
(+3 files in other folders)
